All_Component_DX/force-app/main/default/objects/SM_SFA_Process__c/SM_SFA_Process__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This will be used for configuring Service Flow Automation for push notification and local notification. This will store the Event, Action and Process information.</description>
    <label>SFA Process</label>
    <nameField>
        <displayFormat>SFA-{000000}</displayFormat>
        <label>SFA Process Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFA Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>