All_Component_DX/force-app/main/default/objects/SM_SFA_Process__c/fields/SM_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Event_Type__c</fullName>
    <description>This is used for different type of events supported by the process.</description>
    <inlineHelpText>This is used for different type of events supported by the process.</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Event</fullName>
            </value>
            <value>
                <fullName>Geofence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>