All_Component_DX/force-app/main/default/objects/SM_SFA_Process__c/fields/SM_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Object_API_Name__c</fullName>
    <description>Associated object for the process.</description>
    <inlineHelpText>Associated object for the process.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>