All_Component_DX/force-app/main/default/objects/SM_SFA_Process__c/fields/SM_SFA_Action_JSON__c.field-meta.xml
<CustomField>
    <fullName>SM_SFA_Action_JSON__c</fullName>
    <description>This field is used to capture action related information in the JSON format.</description>
    <inlineHelpText>This field is used to capture action related information in the JSON format.</inlineHelpText>
    <label>SFA Action JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>