All_Component_DX/force-app/main/default/objects/SM_SFA_Process__c/fields/SM_SFA_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_SFA_Process_Id__c</fullName>
    <description>This field will store the Process Id.</description>
    <inlineHelpText>This field will store the Process Id.</inlineHelpText>
    <label>SFA Process Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>