All_Component_DX/force-app/main/default/objects/SM_SFA_Process__c/fields/SM_SFA_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_SFA_Process_Name__c</fullName>
    <description>This field will store the Process Name.</description>
    <inlineHelpText>This field will store the Process Name.</inlineHelpText>
    <label>SFA Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>