All_Component_DX/force-app/main/default/objects/SM_SFA_Process__c/fields/SM_SFM_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_SFM_Process_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to store SFM process which will be consumed by the device.</description>
    <inlineHelpText>This is used to store SFM process which will be consumed by the device.</inlineHelpText>
    <label>SFM Process Name</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>SFA Processes (SFM Process Name)</relationshipLabel>
    <relationshipName>SFA_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>